2012-01-24  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm, tp/Texinfo/Convert/Unicode.pm,
	tp/Texinfo/Convert/XML.pm, util/texinfo.dtd: ` becomes ' in plaintext
	to follow the GNU coding standards change.  ` and ' are translated
	to unicode characters in XML and when @documentencoding is utf-8 and
	enable-encoding is set.

2012-01-22  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm (_convert_xref_commands), 
	tp/Texinfo/Convert/DocBook.pm:
	implement the new convention for five-arg xref with either 
	just Top or no node name.
	* tp/Texinfo/Convert/HTML.pm, texi2any.pl, tp/Texinfo/Common.pm:
	For HTML, add a customization variable, KEEP_TOP_EXTERNAL_REF.
	If set the Top node is not ignored for the reference for the 
	five-arg xref.
	* doc/texinfo.txi (Other Configuration Variables): document
	KEEP_TOP_EXTERNAL_REF.

2012-01-20  Karl Berry  <karl@gnu.org>

	* doc/NEWS: new convention to allow referring to a whole manual
	without a node: a five-arg xref with either just Top or no node name.
	* doc/texinfo.txi (Top Node Naming): document it.
	(Four or Five Arguments): refer to it.
	Also use that new feature throughout, and assorted other cleanups.
	* doc/texinfo.tex (\xrefX): implement it.
	(\topbox, \printedrefnamebox, \printedmanualbox): use these
	named boxes instead of numeric ones.
	* doc/info-stnd.texi: refer to whole manuals.

2012-01-18  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, Makefile.am (SUBDIRS), Pod-Simple-Texinfo: add a
	pod to texinfo converter.

2012-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Configuration Variables for Program Behavior):
	split out into new node, other text tweaks.

2012-01-17  Patrice Dumas  <pertusus@free.fr>

	* TODO, tp/TODO: clean tests related TODO parts.

2012-01-16  Patrice Dumas  <pertusus@free.fr>

	* util/detexinfo, util/Makefile.am: new script to strip @-commands.

	* doc/texinfo.txi (Configuration Variables): document TEXTCONTENT
	and RAW_TEXT.
